# rust-vecset

./: Cargo.toml
examples/: bench.rs
src/: insord.rs  lib.rs  ord.rs
