[package]
name = "vecset"
version = "0.1.0"
authors = ["Leandro Pacheco <contact@leandropacheco.com>"]

[dependencies]
timeit = "0.1"
rand = "0.4"
fnv = "1.0"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
serde_support = [ "serde", "serde_derive" ]
